# server_MPath_proto

mpath_proto_recver/: _socket.c  _socket.h  common.h  compile.sh  receiver.c  receiver.h  start.sh  test  thread_core_affinity_set.c  utility.c  utility.h
mpath_proto_recver/fopen/: main.c
multipath_TCP__sender_/: a.txt  common.h  compile.sh  dataBuf_stack.h  mySocket.c  mySocket.h  sender.c  sender.h  start.sh  test  utility.c  utility.h
server_MPath/: a.txt  common.h  hello.txt  mySocket.cpp  sender.cpp  start.sh  thread_core_affinity_set.h  utility.h
server_MPath_/: a.txt  common.h  compile.sh  mySocket.cpp  mySocket.h  receiver.cpp  receiver.h  start.sh  test  utility.cpp
server_MPath_/fopen/: test
server_MPath_proto/: file_test.txt  mySemaphore.c  test  thread_core_affinity_set.c
server_MPath_proto/c_tool/: dataBuf_stack.c
server_MPath_proto/include/: allocator_pkt.h  bitrate_select.h  codeStreaming_parser.h  common.h  data_manager.h  encoder.h  fec_param_adjustor.h  myHevc_dec.h  mySemaphore.h  mySocket.h  path_selector.h  rs.h  rs_fft.h  sender.h  server.h  system_params.h  timer.h  utility.h  video_reader.h
server_MPath_proto/rs_fft/: CMakeLists.txt  rs_fft.c  test
server_MPath_proto/src/: CMakeLists.txt  bitrate_select.cpp  codeStreaming_parser.cpp  codeStreaming_parser_v2.cpp  compile.sh  data_manager.cpp  encoder.cpp  fec_param_adjustor.cpp  hevcdec.c  input_non_b.265  machu_picchu_a_s111_non_B.265  main.cpp  myHevcdec.cpp  myHevcdec_v2.cpp  mySocket.cpp  path_selector.cpp  server.cpp  start.sh  structure.cpp  test  test_hanoff_sponsor.cpp  test_reader  test_videoRader.sh  test_videoReader  test_videoReader.cpp  test_videoReader.sh  thread_core_affinity_set.cpp  timer.cpp  utility.cpp  video_reader.cpp
server_MPath_proto/src/rs/: rs.c
server_MPath_proto/src/rs_fft/: CMakeLists.txt  cmake_install.cmake  rs_fft.c  test  test.c
server_MPath_proto/src/test_parser/: CMakeCache.txt  CMakeLists.txt  Makefile  a.txt  cmake_install.cmake  codeStreaming_parser.cpp  test  test_parser  test_videoReader.cpp
server_MPath_proto/src/test_parser/rs_fft/: Makefile  cmake_install.cmake
